<resources>
    <string name="app_name">HearU</string>
    <string name="brightness">Brightness</string>
    <string name="brightness_set">Set brightness</string>
    <string name="title_section1">Quick mute</string>
    <string name="title_section2">Schedule</string>
    <string name="title_section3">Help</string>
    <string name="actions">Actions</string>
    <string name="contacts">Contacts whitelist</string>
    <string name="add">Add new</string>
    <string name="and">and</string>
    <string name="confirm_delete_short">Delete period</string>
    <string name="confirm_delete">Are you sure you want to delete this period?\nThis cannot be undone.</string>
    <string name="done">Done</string>
    <string name="disable">Disable</string>
    <string name="disable_between">Disable between</string>
    <string name="disable_noti_light">Disable notif. LED</string>
    <string name="disable_noti_light_short">Light</string>
    <string name="duration">Duration</string>
    <string name="edit">Edit</string>
    <string name="enable_vibration">Enable vibration</string>
    <string name="lock_volume">Lock volume</string>
    <string name="lock">Lock</string>
    <string name="mute_media">Mute media</string>
    <string name="mute">Mute</string>
    <string name="media">Media</string>
    <string name="minutes">minutes</string>
    <string name="hours">hours</string>
    <string name="no">No</string>
    <string name="pick_time">Pick time</string>
    <string name="picker_hint">Press the buttons or fling the text to change time.</string>
    <string name="scheduler_tooltip_text">Whitelisted Contacts: As you add a new alarm, click "ADD" in the Contacts whitelist section, and add the contacts you want to call even through your silenced phone.\n\nQuick Mute: Perform a quick, one-time mute of the ring and notification sounds. Sound is unmuted again after the set duration.\n\nSchedule: When the service is running it will automatically mute all sounds (except alarms) every day between the set times.\n\nAdd and setup a new period by pressing "Add new", delete a period by long pressing it.\n\nTip: To mute the phone from 22:00 on Thursday to 06:00 on Friday, set the period from 22:00 to 06:00 and the day to Thursday.</string>
    <string name="scheduler_popup_tooltip_text">Note that if audio is set to be reenabled before being disabled, it will be enabled on the next day.</string>
    <string name="service_started">Service enabled</string>
    <string name="service_stopped">Service disabled</string>
    <string name="service_running">Service running</string>
    <string name="sound_disable_between">Mute sound between:</string>
    <string name="start">Start service</string>
    <string name="stop">Stop service</string>
    <string name="swipe_tooltip">Swipe left or right to navigate.</string>
    <string name="to">to</string>
    <string name="unmute_on_call">Unmute on call</string>
    <string name="unmute">Unmute</string>
    <string name="use_on">Use on</string>
    <string name="vibration">Vibration</string>
    <string name="when_muted">When muted:</string>
    <string name="yes">Yes</string>


    <string name="monday_short">Mo</string>
    <string name="tuesday_short">Tu</string>
    <string name="wednesday_short">We</string>
    <string name="thursday_short">Th</string>
    <string name="friday_short">Fr</string>
    <string name="saturday_short">Sa</string>
    <string name="sunday_short">Su</string>
    <string name="indefinitely">Indefinitely</string>
</resources>
